--- a/BulkyBooks.Web/Areas/Admin/Views/Order/Index.cshtml
+++ b/BulkyBooks.Web/Areas/Admin/Views/Order/Index.cshtml
@@ -3,10 +3,12 @@
     ViewData["Title"] = "Index";
 }
 
+
 @{
     var status = Context.Request.Query["status"];
     var pending = "text-primary";
     var Inprocess = "text-primary";
+    var approved = "text-primary";
     var completed = "text-primary";
     var all = "text-primary";
 
@@ -17,6 +19,10 @@
             pending = "active text-white";
             break;
 
+        case "approved":
+            approved = "active text-white";
+            break;
+
         case "inprocess":
             Inprocess = "active text-white";
             break;
@@ -25,10 +31,9 @@
             completed = "active text-white";
             break;
 
-        case "all":
+        default:
             all = "active text-white";
             break;
-
 
     }
 }
@@ -51,6 +56,9 @@
                 </a>
                 <a style="text-decoration: None;" asp-controller="order" asp-action="index" asp-route-status="completed">
                 <li class="list-group-item @completed"> Completed </li>
+                </a>
+                <a style="text-decoration: None;" asp-controller="order" asp-action="index" asp-route-status="approved">
+                <li class="list-group-item @approved"> Approved </li>
                 </a>
                 <a style="text-decoration: None;" asp-controller="order" asp-action="index" asp-route-status="all">
                 <li class="list-group-item @all"> All </li>
