--- a/BulkyBooks.Web/Views/Shared/_Layout.cshtml
+++ b/BulkyBooks.Web/Views/Shared/_Layout.cshtml
@@ -43,6 +43,12 @@
                         </li>
 
                         <li class="nav-item">
+                            <a class="nav-link" asp-area="Admin" asp-controller="order" asp-action="index">
+                               Manage Order
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
                             <a class="nav-link" asp-area="Customer" asp-controller="Cart" asp-action="index">
                                 <i class="bi bi-cart3"></i>
                             </a>
