--- a/BulkyBooks.Web/Areas/Admin/Views/Order/Details.cshtml
+++ b/BulkyBooks.Web/Areas/Admin/Views/Order/Details.cshtml
@@ -142,7 +142,7 @@
                                 <div class="col-9">
                                     @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                                     {
-                                        <input asp-for="OrderHeader.Carrier" type="text" class="form-control" />
+                                        <input asp-for="OrderHeader.Carrier" id="carrier" type="text" class="form-control" />
                                         <span asp-validation-for="@Model.OrderHeader.Carrier" class="text-danger"></span>
                                     }
                                     else
@@ -158,7 +158,7 @@
                                 <div class="col-9">
                                     @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                                     {
-                                        <input asp-for="OrderHeader.TrackingNumber" type="text" class="form-control" />
+                                        <input asp-for="OrderHeader.TrackingNumber" id="trackingNumber" type="text" class="form-control" />
                                         <span asp-validation-for="@Model.OrderHeader.TrackingNumber" class="text-danger"></span>
                                     }
                                     else
@@ -172,7 +172,7 @@
                             <div class="row my-1">
                                 <div class="col-3"> Shipping Date </div>
                                 <div class="col-9">
-                                    <input value="OrderHeader.ShippingDate.ToShortDateString()" readonly type="text" class="form-control" />
+                                    <input value="@Model.OrderHeader.ShippingDate.ToShortDateString()" readonly type="text" class="form-control" />
                                 </div>
                             </div>
 
@@ -267,25 +267,30 @@
                             {
                                 if (Model.OrderHeader.OrderStatus == SD.StatusApproved)
                                 {
-                                    <input type="submit" class="btn btn-primary form-control my-1" value="Start Processing" />
+                                    <input type="submit" asp-action="StartProcessing" class="btn btn-primary form-control my-1" value="Start Processing" />
                                 }
 
                                 if (Model.OrderHeader.OrderStatus == SD.StatusInProcess)
                                 {
-                                    <input type="submit" class="btn btn-primary form-control my-1" value="Ship  Order" />
+                                    <input type="submit" asp-action="ShipOrder" onclick="return validateData()"
+                                           class="btn btn-primary form-control my-1" value="Ship Order" />
 
-                                }
-
-                                if (Model.OrderHeader.PaymentStatus == SD.PaymentStatusDelayedPayment && Model.OrderHeader.OrderStatus == SD.StatusShipped)
-                                {
-                                    <input type="submit" class="btn btn-success form-control my-1" value="Pay Now" />
-                                }
-
-                                if (Model.OrderHeader.OrderStatus != SD.StatusRefunded || Model.OrderHeader.OrderStatus != SD.StatusCancelled)
-                                {
-                                    <input type="submit" class="btn btn-danger form-control my-1" value="Cancel Order" />
                                 }
                             }
+
+                            @if (Model.OrderHeader.PaymentStatus == SD.PaymentStatusDelayedPayment && Model.OrderHeader.OrderStatus == SD.StatusShipped)
+                            {
+                                <input type="submit" class="btn btn-success form-control my-1" value="Pay Now" />
+                            }
+
+                            @if (Model.OrderHeader.OrderStatus != SD.StatusRefunded &&
+                            Model.OrderHeader.OrderStatus != SD.StatusCancelled &&
+                            Model.OrderHeader.OrderStatus != SD.StatusShipped
+                            )
+                            {
+                            <input type="submit" asp-action="CancelOrder" class="btn btn-danger form-control my-1" value="Cancel Order" />
+                            }
+
 
 
                         </div>
@@ -300,5 +305,32 @@
 @section Scripts {
 
 
+    <script>
+        function validateData() {
+            if (document.getElementById("trackingNumber").value == "") {
+
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'please add tracking Number!'
+                });
+                console.log("here");
+                return false;
+            }
+
+            if (document.getElementById("carrier").value == "") {
+
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Oops...',
+                    text: 'Please add carrier!'
+                });
+                console.log("here");
+                return false;
+            }
+
+            return true;
+        }
+    </script>
 }
 
