--- a/BulkyBooks.Web/Views/Shared/_Layout.cshtml
+++ b/BulkyBooks.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using BulkyBooks.Utility;
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -28,6 +30,8 @@
                             </a>
                         </li>
 
+                        @if (User.IsInRole(SD.Role_Admin + "," + SD.Role_Employee))
+                        {
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Content Management</a>
                             <div class="dropdown-menu">
@@ -41,6 +45,7 @@
 
                             </div>
                         </li>
+                        }
 
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Admin" asp-controller="order" asp-action="index">
